Fix overflow bug

--- a/src/css/customer.scss
+++ b/src/css/customer.scss
@@ -5,7 +5,7 @@
 }
 
 .customer-greeting-message-h2 {
-    color: white;
+    color: goldenrod;
     font-family: 'Rajdhani', sans-serif;
     font-size: 4em;
     margin-left: 20px;
@@ -14,7 +14,7 @@
 .customer-main {
     margin: 0px;
     height: 720px;
-    background-image: linear-gradient(to top, #00c6fb 0%, #005bea 100%);
+    background-image: url('../images/nightsky.jpg');
 }
 
 .section-customer-main {
@@ -31,7 +31,7 @@
 }
 
 .aside-filter-menu {
-    border: 2px solid black;
+    border: 4px solid black;
     width: 100%;
     height: 100%;
     display: flex;
@@ -105,13 +105,15 @@
 }
 
 .display-results-section {
-    border: 2px solid black;
+    border: 4px solid black;
     border-left: 1px solid black;
     border-right: 1px solid black;
     width: 800px;
     height: 100%;
+    // min-height: 0px;
     max-height: 600px;
-    margin: 0px auto;
+    margin: 0px;
+    justify-content: flex-start;
     background-image: none;
     background-color: cornflowerblue;
     overflow: scroll;
@@ -140,7 +142,7 @@
     width: 300px;
     height: 100%;
     margin: 0px auto;
-    border: 2px solid black;
+    border: 4px solid black;
     background-color: cadetblue;
     display: flex;
     flex-direction: column;
@@ -253,6 +255,7 @@
 .customer-booking-history-div {
     width: 90%;
     display: flex;
+    scroll-snap-align: center;
     overflow: scroll;
 
 }
@@ -261,18 +264,19 @@
     display: flex;
     height: 100px;
     flex-direction: row;
-    overflow: scroll;
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
 }
 
 .history-results-card {
     height: 120px;
     background-color: hsl(191°, 62%, 92%);
-    ;
     margin: 5px;
     border: 10px solid;
     border-color: lightblue;
     display: flex;
     flex-direction: column;
+    scroll-snap-align: center;
 
 }
 
@@ -282,4 +286,19 @@
     font-family: 'Rajdhani', sans-serif;
     font-weight: bold;
     text-align: center;
+}
+
+.log-out-link {
+    margin-top: 50px;
+    margin-right: 40px;
+    font-family: 'Rajdhani', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    font-size: 2em;
+    color: goldenrod;
+    text-decoration: none;
+}
+
+.log-out-link:hover {
+    color: rgb(134, 15, 15);
 }
